mejora blog, mejora, contact, clases utiles, mejora about

--- a/about.html
+++ b/about.html
@@ -6,6 +6,9 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=PT+Serif:ital,wght@0,400;0,700;1,400;1,700&display=swap" rel="stylesheet">
     <link
         href="https://fonts.googleapis.com/css2?family=Oswald:wght@200..700&family=Work+Sans:wght@300;400;500;600&display=swap"
         rel="stylesheet">
@@ -15,20 +18,20 @@
 </head>
 
 <body>
-    <header class="bg-101010">
+    <header class="bg-000000">
         <nav class="contenedormenu">
             <div class="logo-container">
                 <a href="index.html">
                     <img class="logo" src="assets/images/home/logo-light.svg" alt="logo">
                 </a>
             </div>
-            <div class="navbar">
+            <div class="navbar Flex">
                 <ul>
-                    <li class="home"><a href="index.html">Home</a></li>
-                    <li class="portfolio"><a href="portfolio.html">Portfolio</a></li>
-                    <li class="blog"><a href="blog.html">Blog</a></li>
-                    <li class="about"><a href="about.html">About</a></li>
-                    <li class="contact"><a href="contact.html">Contact</a></li>
+                    <li class="home"><a class="color-white" href="index.html">Home</a></li>
+                    <li class="portfolio"><a class="color-white" href="portfolio.html">Portfolio</a></li>
+                    <li class="blog"><a class="color-white" href="blog.html">Blog</a></li>
+                    <li class="about"><a class="color-white" href="about.html">About</a></li>
+                    <li class="contact"><a class="color-white" href="contact.html">Contact</a></li>
                 </ul>
             </div>
         </nav>
@@ -36,26 +39,27 @@
 
     <main>
 
-        <section class="about-intro">
+        <section class="about-intro bg-101010">
             <div class="about-intro-text">
-                <h2>
+                <h2 class="color-white">
                     WE HAVE OVER 20 YEARS OF COMBINED EXPERIENCE AND KNOW A THING OR TWO ABOUT DESIGNING
-                    <span class="about-intro-text-amarillo">WEBSITES AND MOBILE APPS.</span>
+                    <span class="about-intro-text-amarillo color-FCDA05">WEBSITES AND MOBILE APPS.</span>
                 </h2>
          </section>        
 
-                <div class="primera-imagen-about">
-                </div>
+                <figure class="bg-000000">
+                    <img class="primera-imagen-about" src="/assets/images/about/imagen-byn-about.jpg" alt="imagen-byn-about">
+                </figure>
        
         <section class="about-hero">
-            <div class="about-hero__inner">
-                <h3>WE ARE AN <p class="independent-amarillo"> INDEPENDENT</p></h3>
+            <div class="about-hero__inner font-apple color-white">
+                <h3 class="flex font-apple">WE ARE AN <p class="independent-amarillo color-FCDA05"> INDEPENDENT</p></h3>
                 <h3>BRAND & MARKETING AGENCY.</h3>
             </div>
         
 
         <!-- TEXTO EN DOS COLUMNAS -->
-        <article class="about-descripcion">
+        <article class="about-descripcion color-white bg-101010">
             <div class="about-texto">
                 <p>
                     We are a new Branding Agency. Over 10 years of combined experience, and know a thing or two about
@@ -82,48 +86,47 @@
         </section>
 
         <!-- BLOQUE HIRE US -->
-        <section class="about-hire">
-            <h2>WANT TO WORK WITH US?</h2>
-            <a href="contact.html" class="hire-boton">HIRE US</a>
+        <section class="about-hire bg-181818">
+            <h2 class="color-white">WANT TO WORK WITH US?</h2>
+            <a href="contact.html" class="hire-boton bg-FCDA05 color-00000 font-oswald">HIRE US</a>
         </section>
 
     </main>
 
-    <!-- FOOTER -->
     <footer>
-        <section class="footer">
+        <section class="footer displayFlex color-515151 bg-010101">
             <div class="footer-data">
                 <p>2018 © Design by Unvab. Code by nK</p>
             </div>
 
             <div class="go-to-top">
-                <p><a href="about.html">Go to top</a></p>
+                <p><a class="color-515151" href="index.html">Go to top</a></p>
             </div>
 
             <article class="iconos-redes">
                 <ul>
                     <li class="icono-twitter">
-                        <a href="https://x.com/" target="_blank">
+                        <a class="color-515151" href="https://x.com/" target="_blank">
                             <i class="fa-brands fa-twitter"></i>
                         </a>
                     </li>
                     <li class="icono-facebook">
-                        <a href="https://www.facebook.com/" target="_blank">
+                        <a class="color-515151" href="https://www.facebook.com/" target="_blank">
                             <i class="fa-brands fa-facebook-f"></i>
                         </a>
                     </li>
                     <li class="icono-dribbble">
-                        <a href="https://dribbble.com/" target="_blank">
+                        <a class="color-515151" href="https://dribbble.com/" target="_blank">
                             <i class="fa-brands fa-dribbble"></i>
                         </a>
                     </li>
                     <li class="icono-instagram">
-                        <a href="https://www.instagram.com/" target="_blank">
+                        <a class="color-515151" href="https://www.instagram.com/" target="_blank">
                             <i class="fa-brands fa-instagram"></i>
                         </a>
                     </li>
                     <li class="icono-behance">
-                        <a href="https://www.behance.net/" target="_blank">
+                        <a class="color-515151" href="https://www.behance.net/" target="_blank">
                             <i class="fa-brands fa-behance"></i>
                         </a>
                     </li>
