--- a/art-01-blog.html
+++ b/art-01-blog.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="es-Es">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -7,12 +8,16 @@
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Oswald:wght@200..700&display=swap" rel="stylesheet">
     <script src="https://kit.fontawesome.com/74915e9a34.js" crossorigin="anonymous"></script>
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=PT+Serif:ital,wght@0,400;0,700;1,400;1,700&display=swap" rel="stylesheet">
     <title>Skylith - Home</title>
     <link rel="stylesheet" href="assets/css/style.css">
 </head>
-<body>
-    <header class="bg-101010">
-        <nav class="contenedormenu">
+
+<body class="bg-101010">
+    <header class="bg-000000">
+        <nav class="contenedormenu flex align-items-center">
             <div class="logo-container">
                 <a href="index.html">
                     <img class="logo" src="assets/images/home/logo-light.svg" alt="logo">
@@ -20,30 +25,119 @@
             </div>
             <div class="navbar">
                 <ul>
-                    <li class="home"><a href="index.html">Home</a></li>
-                    <li class="portfolio"><a href="portfolio.html">Portfolio</a></li>
-                    <li class="blog"><a href="blog.html">Blog</a></li>
-                    <li class="about"><a href="about.html">About</a></li>
-                    <li class="contact"><a href="contact.html">Contact</a></li>
+                    <li class="home"><a class="color-white" href="index.html">Home</a></li>
+                    <li class="portfolio"><a class="color-white" href="portfolio.html">Portfolio</a></li>
+                    <li class="blog"><a class="color-white" href="blog.html">Blog</a></li>
+                    <li class="about"><a class="color-white" href="about.html">About</a></li>
+                    <li class="contact"><a class="color-white" href="contact.html">Contact</a></li>
                 </ul>
             </div>
         </nav>
     </header>
 
-    <main>
-        <section class="section-art1">
-                <img src="assets/images/blog/imgi_34_post-s2-9-1024x681.jpg" alt="imagen-oarticul-01-blog">
+    <main class="width-80 cont-centrado">
+      <section class="section-art1 bg-101010">
+        <figure class="cont-centrado">
+          <img src="assets/images/blog/imgi_34_post-s2-9-1024x681.jpg" alt="imagen-oarticul-01-blog"/>
+        </figure>
+        <h1 class="color-FCDA05 text-center uppercase">
+          Here’s a Simple Trick
+        </h1>
+        <div class="flex column gap">
+          <p class="color-CBCBCB p">
+            Cattle firmament rule you’re fish fruit fourth whales earth whose
+            Had cattle isn’t of him sea, of they’re land every also so male
+            seed, fifth made moved second our seasons earth forth. Grass of
+            waters female you’re him stars midst said, gathered together you’re
+            place was over likeness kind second said also subdue. Winged fish
+            their. Set above seas moved first midst air. Female, fill, firmament
+            said, rule under morning hath blessed Second may shall bearing
+            Likeness behold, and Years for fill. Two grass lights him good day
+            yielding itself yielding. Saw give. Abundantly created.
+          </p>
 
+          <p class="segundop color-white font-PT">
+            Cattle form saw Replenish female dominion give you’re. Divide
+            brought Form, can’t creature saying seasons, blessed have you
+            lights. Had firmament very they’re male moving whales bearing for
+            herb. Morning called darkness earth abundantly fruitful.
+          </p>
 
+          <p class="color-CBCBCB p">
+            Lesser land, light image and whose without may winged gathering.
+            Divided. Creature multiply may lights. Had him waters earth
+            gathering don’t shall. Stars upon saw yielding grass two deep that
+            stars let rule man creeping. Winged make signs creature over, she’d
+            two. Rule give. Cattle lesser they’re hath two there. Earth two
+            brought.
+          </p>
+        </div>
+        <div class="dos-imagenes">
+  <figure>
+    <img src="assets/images/blog/blog.jpg" alt="">
+  </figure>
 
-        </section>
+  <figure>
+    <img src="assets/images/blog/fotoblog2.jpeg" alt="">
+  </figure>
+</div>
+
+      <section class="section-art2 color-white bg-101010">
+        <div class="flex column gap">
+            <h2 class="color-FCDA05">THE ULTIMATE REVELATION OF NATURE</h2>
+            <p class="color-CBCBCB p">Hath fly. You’ll fruitful form lights in forth gathered made brought, isn’t own moveth tree god place had for. Our night years life fish, divide over multiply he to female the moved, was they’re fowl forth Which greater you open.Meat waters of his you were fish they’re itself. Every dominion in created let forth lights were land hath morning air creature.</p>
+
+<p class="segundop color-white font-PT">Grass stars may winged replenish deep sixth itself. Whose seas replenish night god spirit us, under herb. Cattle blessed so living shall us void divide wherein said given. </p>
+
+<p class="color-CBCBCB p">Under which can’t likeness replenish air gathering sea female, him him he that whose spirit fly moveth you’ll make had can’t, gathered female kind, void the good divide herb make, set. Moved us creepeth were hath fill Moving so greater and can’t kind behold may days have great.</p>
+        </div>
+        <div class="redes-caja">
+  <a href="#" class="btn facebook color-white">
+    <i class="fa-brands fa-facebook-f"></i>
+    <span>Facebook</span>
+  </a>
+
+  <a href="#" class="btn twitter color-white">
+    <i class="fa-brands fa-x-twitter"></i>
+    <span>X / Twitter</span>
+  </a>
+
+  <a href="#" class="btn pinterest color-white">
+    <i class="fa-brands fa-pinterest-p"></i>
+    <span>Pinterest</span>
+  </a>
+</div>
+        </section> 
+
+       <section class="section-comentarios">
+  <div class="linea-gris"></div>
+  <h2 class="color-white">Comments:</h2>
+  <div class="comment-fila">
+    <figure class="comment-foto">
+      <img src="assets/images/blog/imgi_4_logo-dark.svg" alt="avatar">
+    </figure>
+    <div class="comment-contenido">
+      <div class="comment-header">
+        <h4 class="comment-nombre color-white">Craager</h4>
+        <div class="comment-info">
+          <span class="comment-fecha color-white">October 21, 2018</span>
+          <a href="#" class="comment-reply color-white uppercase">Reply</a>
+        </div>
+      </div>
+      <p class="comment-text color-white">
+        Nullam ac dui et purus malesuada gravida id fermentum orci. In eu ipsum quis urna hendrerit 
+        condimentum vitae a mauris. In congue turpis purus, vitae tempus ante id. Donec orci arcu, 
+        sagittis ut finibus vitae.
+      </p>
+    </div>
+  </div>
+  <div class="linea-gris"></div>
+</section>
+
 
     </main>
-    <footer>
-
-    </footer>
+    <footer></footer>
 
     <script src="assets/js/js.js"></script>
-    
-</body>
+  </body>
 </html>
