--- a/portfolio.html
+++ b/portfolio.html
@@ -13,7 +13,7 @@
 </head>
 
 <body>
-    <header class="bg-101010">
+    <header class="bg-000000">
         <nav class="contenedormenu">
             <div class="logo-container">
                 <a href="index.html">
@@ -22,99 +22,100 @@
             </div>
             <div class="navbar">
                 <ul>
-                    <li class="home"><a href="index.html">Home</a></li>
-                    <li class="portfolio"><a href="portfolio.html">Portfolio</a></li>
-                    <li class="blog"><a href="blog.html">Blog</a></li>
-                    <li class="about"><a href="about.html">About</a></li>
-                    <li class="contact"><a href="contact.html">Contact</a></li>
+                    <li class="home"><a class="color-white" href="index.html">Home</a></li>
+                    <li class="portfolio"><a class="color-white" href="portfolio.html">Portfolio</a></li>
+                    <li class="blog"><a class="color-white" href="blog.html">Blog</a></li>
+                    <li class="about"><a class="color-white" href="about.html">About</a></li>
+                    <li class="contact"><a class="color-white" href="contact.html">Contact</a></li>
                 </ul>
             </div>
         </nav>
     </header>
 
     <main>
-    <section class="encabezado-logo">
-        <div class="icono-encabezado">
-                        <i class="fa-solid fa-grip"></i>
-                    </div>
-    </section>
 
-    <section class="galeria">
+        <section class="encabezado-logo bg-101010 cont-centrado">
+            <div class="icono-encabezado">
+                <i class="fa-solid fa-grip color-white"></i>
+            </div>
+        </section>
+
+        <section class="galeria">
 
             <div class="galeria-img">
                 <article>
                     <a href="" class="gallery-item">
-                        <img class="imagen" src="./assets/images/home/imagen1.jpg" alt="Imagen de la Galería 1">
-                        <div class="overlay">
-                            <h2>NEW MAGAZINE</h2>
+                        <img class="imagen" src="assets/images/home/imagen1.jpg" alt="Imagen de la Galería 1">
+                        <div class="overlay color-FCDA05">
+                            <h2 class="color-white">NEW MAGAZINE</h2>
                             <h5>BRANDING</h5>
-                            <div class="contenedor-hover">
-                                <p class="letra-hover">N</p>
+                            <div class="contenedor-hover displayFlex">
+                                <p class="letra-hover color-FCDA05">N</p>
                             </div>
                         </div>
                     </a>
                 </article>
                 <article>
                     <a href="" class="gallery-item">
-                        <img class="imagen" src="./assets/images/home/portfolio-single-style-2-2-1920x1110.jpg"
+                        <img class="imagen" src="assets/images/home/portfolio-single-style-2-2-1920x1110.jpg"
                             alt="imagen2"" alt=" Imagen de la Galería 2">
-                        <div class="overlay">
-                            <h2>SMART WATCH DESIGN</h2>
+                        <div class="overlay color-FCDA05">
+                            <h2 class="color-white">SMART WATCH DESIGN</h2>
                             <h5>BRANDING</h5>
                             <div class="contenedor-hover">
-                                <p class="letra-hover">S</p>
+                                <p class="letra-hover color-FCDA05">S</p>
                             </div>
                         </div>
                     </a>
                 </article>
                 <article>
                     <a href="" class="gallery-item">
-                        <img class="imagen" src="./assets/images/home/portfolio-single-style-2-5.jpg" alt="imagen3"
+                        <img class="imagen" src="assets/images/home/portfolio-single-style-2-5.jpg" alt="imagen3"
                             alt="Imagen de la Galería 3">
-                        <div class="overlay">
-                            <h2>PROMOTIONAL</h2>
+                        <div class="overlay color-FCDA05">
+                            <h2 class="color-white">PROMOTIONAL</h2>
                             <h5>MARKETING</h5>
                             <div class="contenedor-hover">
-                                <p class="letra-hover">P</p>
+                                <p class="letra-hover color-FCDA05">P</p>
                             </div>
                         </div>
                     </a>
                 </article>
                 <article>
                     <a href="" class="gallery-item">
-                        <img class="imagen" src="./assets/images/home/portfolio-single-style-2-6.jpg"
+                        <img class="imagen" src="assets/images/home/portfolio-single-style-2-6.jpg"
                             alt="Imagen de la Galería 4">
-                        <div class="overlay">
-                            <h2>PHOTOGRAPHY WEBSITE</h2>
+                        <div class="overlay color-FCDA05">
+                            <h2 class="color-white">PHOTOGRAPHY WEBSITE</h2>
                             <h5>DEVELOPMENT</h5>
                             <div class="contenedor-hover">
-                                <p class="letra-hover">P</p>
+                                <p class="letra-hover color-FCDA05">P</p>
                             </div>
                         </div>
                     </a>
                 </article>
                 <article>
                     <a href="" class="gallery-item">
-                        <img class="imagen" src="./assets/images/home/portfolio-single-style-2-3-1920x1127.jpg"
+                        <img class="imagen" src="assets/images/home/portfolio-single-style-2-3-1920x1127.jpg"
                             alt="Imagen de la Galería 5">
-                        <div class="overlay">
-                            <h2>CREATIVE MOBILE APP</h2>
+                        <div class="overlay color-FCDA05">
+                            <h2 class="color-white">CREATIVE MOBILE APP</h2>
                             <h5>MOBILE</h5>
                             <div class="contenedor-hover">
-                                <p class="letra-hover">C</p>
+                                <p class="letra-hover color-FCDA05">C</p>
                             </div>
                         </div>
                     </a>
                 </article>
                 <article>
                     <a href="" class="gallery-item">
-                        <img class="imagen" src="./assets/images/home/portfolio-single-style-2-7.jpg"
+                        <img class="imagen" src="assets/images/home/portfolio-single-style-2-7.jpg"
                             alt="Imagen de la Galería 6">
-                        <div class="overlay">
-                            <h2>PERSONAL BLOG</h2>
+                        <div class="overlay color-FCDA05">
+                            <h2 class="color-white">PERSONAL BLOG</h2>
                             <h5>DESIGN</h5>
                             <div class="contenedor-hover">
-                                <p class="letra-hover">C</p>
+                                <p class="letra-hover color-FCDA05">C</p>
                             </div>
                         </div>
                     </a>
@@ -122,54 +123,55 @@
             </div>
         </section>
 
-    <section class="fin-galeria">
-        <p class="fin-portfolio">You’ve reached the end of the list</p>
-                    </div>
-    </section>
+
+        <section class="fin-galeria bg-101010">
+            <p class="fin-portfolio color-BOBOBO">You’ve reached the end of the list</p>
+            </div>
+        </section>
     </main>
 
 
-     <footer>
-  <section class="footer">
-    <div class="footer-data">
-      <p>2018 © Design by Unvab. Code by nK</p>
-    </div>
+    <footer>
+        <section class="footer displayFlex color-515151 bg-010101">
+            <div class="footer-data">
+                <p>2018 © Design by Unvab. Code by nK</p>
+            </div>
 
-    <div class="go-to-top">
-      <p><a href="portfolio.html">Go to top</a></p>
-    </div>
+            <div class="go-to-top">
+                <p><a class="color-515151" href="portfolio.html">Go to top</a></p>
+            </div>
 
-    <article class="iconos-redes">
+            <article class="iconos-redes">
                 <ul>
                     <li class="icono-twitter">
-                        <a href="https://x.com/" target="_blank">
+                        <a class="color-515151" href="https://x.com/" target="_blank">
                             <i class="fa-brands fa-twitter"></i>
                         </a>
                     </li>
                     <li class="icono-facebook">
-                        <a href="https://www.facebook.com/" target="_blank">
+                        <a class="color-515151" href="https://www.facebook.com/" target="_blank">
                             <i class="fa-brands fa-facebook-f"></i>
                         </a>
                     </li>
                     <li class="icono-dribbble">
-                        <a href="https://dribbble.com/" target="_blank">
+                        <a class="color-515151" href="https://dribbble.com/" target="_blank">
                             <i class="fa-brands fa-dribbble"></i>
                         </a>
                     </li>
                     <li class="icono-instagram">
-                        <a href="https://www.instagram.com/" target="_blank">
+                        <a class="color-515151" href="https://www.instagram.com/" target="_blank">
                             <i class="fa-brands fa-instagram"></i>
                         </a>
                     </li>
                     <li class="icono-behance">
-                        <a href="https://www.behance.net/" target="_blank">
+                        <a class="color-515151" href="https://www.behance.net/" target="_blank">
                             <i class="fa-brands fa-behance"></i>
                         </a>
                     </li>
                 </ul>
             </article>
-  </section>
-</footer>
+        </section>
+    </footer>
 
 
     <script src="./assets/js/js.js"></script>
