--- a/blog.html
+++ b/blog.html
@@ -13,7 +13,7 @@
 </head>
 
 <body>
-    <header class="bg-101010">
+    <header class="bg-000000">
         <nav class="contenedormenu ">
             <div class="logo-container">
                 <a href="index.html">
@@ -22,32 +22,33 @@
             </div>
             <div class="navbar">
                 <ul>
-                    <li class="home"><a href="index.html">Home</a></li>
-                    <li class="portfolio"><a href="portfolio.html">Portfolio</a></li>
-                    <li class="blog"><a href="blog.html">Blog</a></li>
-                    <li class="about"><a href="about.html">About</a></li>
-                    <li class="contact"><a href="contact.html">Contact</a></li>
+                    <li class="home"><a class="color-white" href="index.html">Home</a></li>
+                    <li class="portfolio"><a class="color-white" href="portfolio.html">Portfolio</a></li>
+                    <li class="blog"><a class="color-white" href="blog.html">Blog</a></li>
+                    <li class="about"><a class="color-white" href="about.html">About</a></li>
+                    <li class="contact"><a class="color-white" href="contact.html">Contact</a></li>
                 </ul>
             </div>
         </nav>
     </header>
 
     <main>
-        <section class="encabezado-logo">
+        <section class="encabezado-logo bg-101010 cont-centrado">
             <div class="icono-encabezado">
-                <i class="fa-solid fa-grip"></i>
+                <i class="fa-solid fa-grip color-white"></i>
             </div>
         </section>
+       
 
         <img class="imagen-montania-blog" src="./assets/images/blog/montania.jpg" alt="imagen-montania">
 
-        <section class="hero-banner-1">
-            <article class="hero-banner-1-inner">
-            <h3 class="titulo-patrick">Here’s a Simple Trick</h3>
+        <section class="hero-banner-1 bg-161616">
+            <article class="hero-banner-1-inner bg-161616">
+            <h3 class="titulo-patrick color-white">Here’s a Simple Trick</h3>
             <div class="Uncategorized">
-                <a href="blog.html">Uncategorized</a>
+                <a class="color-white" href="blog.html">Uncategorized</a>
             </div>
-            <p class="texto-patrick">Cattle firmament rule you're fish fruit fourth whales earth whose Had cattle isn't
+            <p class="texto-patrick color-BOBOBO">Cattle firmament rule you're fish fruit fourth whales earth whose Had cattle isn't
                 of him sea, of they're land every also so male seed, fifth made moved second our seasons earth forth.
                 Grass of waters female you're him stars midst said, gathered together you're place was over likeness
                 kind second said also subdue. Winged fish their. Set above seas moved first midst air. Female, fill,
@@ -55,19 +56,19 @@
                 fill. Two grass lights him good day yielding itself yielding. Saw give. Abundantly created. Cattle form
                 saw Replenish female...</p>
 
-            <div> <a href="blog.html" class="read-more-1">Read More</a></div>
+            <div> <a href="blog.html" class="read-more-1 color-white">Read More</a></div>
             </article>
         </section>
 
         <img class="imagen-aceite-blog" src="./assets/images/blog/segunda-imagen-grande.jpg" alt="imagen-montania">
 
-        <section class="hero-banner-1 bg-181818">
+        <section class="hero-banner-1 bg-161616">
             <article class="hero-banner-1-inner">
-                <h3 class="titulo-patrick">The History Of Nature</h3>
+                <h3 class="titulo-patrick color-white">The History Of Nature</h3>
                 <div class="Uncategorized">
-                    <a href="blog.html">Uncategorized</a>
+                    <a class="color-white"href="blog.html">Uncategorized</a>
                 </div>
-                <p class="texto-patrick">Cattle firmament rule you're fish fruit fourth whales earth whose Had cattle
+                <p class="texto-patrick color-BOBOBO">Cattle firmament rule you're fish fruit fourth whales earth whose Had cattle
                     isn't of him sea, of they're land every also so male seed, fifth made moved second our seasons earth
                     forth. Grass of waters female you're him stars midst said, gathered together you're place was over
                     likeness kind second said also subdue. Winged fish their. Set above seas moved first midst air.
@@ -75,19 +76,19 @@
                     behold, and Years for fill. Two grass lights him good day yielding itself yielding. Saw give.
                     Abundantly created. Cattle form saw Replenish female...</p>
 
-                <div> <a href="blog.html" class="read-more-1">Read More</a></div>
+                <div> <a href="blog.html" class="read-more-1 color-white">Read More</a></div>
             </article>
         </section>
 
         <img class="imagen-aceite-blog" src="./assets/images/blog/imgi_52_post-s2-7-1280x853.jpg" alt="lago-montaña">
 
-        <section class="hero-banner-1 bg-181818">
+        <section class="hero-banner-1 bg-161616">
             <article class="hero-banner-1-inner">
-                <h3 class="titulo-patrick">Why you should Always First</h3>
+                <h3 class="titulo-patrick color-white">Why you should Always First</h3>
                 <div class="Uncategorized">
-                    <a href="blog.html">Uncategorized</a>
+                    <a class="color-white" href="blog.html">Uncategorized</a>
                 </div>
-                <p class="texto-patrick">Cattle firmament rule you're fish fruit fourth whales earth whose Had cattle
+                <p class="texto-patrick color-BOBOBO">Cattle firmament rule you're fish fruit fourth whales earth whose Had cattle
                     isn't of him sea, of they're land every also so male seed, fifth made moved second our seasons earth
                     forth. Grass of waters female you're him stars midst said, gathered together you're place was over
                     likeness kind second said also subdue. Winged fish their. Set above seas moved first midst air.
@@ -95,20 +96,20 @@
                     behold, and Years for fill. Two grass lights him good day yielding itself yielding. Saw give.
                     Abundantly created. Cattle form saw Replenish female...</p>
 
-                <div> <a href="blog.html" class="read-more-1">Read More</a></div>
+                <div> <a href="blog.html" class="read-more-1 color-white">Read More</a></div>
             </article>
         </section>
 
         <img class="imagen-aceite-blog" src="./assets/images/blog/imgi_61_post-s2-6-1280x853.jpg" alt="hombre-mochila">
 
 
-        <section class="hero-banner-1 bg-181818">
+        <section class="hero-banner-1 bg-161616">
             <article class="hero-banner-1-inner">
-                <h3 class="titulo-patrick">Are you doing The Right Way?</h3>
+                <h3 class="titulo-patrick color-white">Are you doing The Right Way?</h3>
                 <div class="Uncategorized">
-                    <a href="blog.html">Uncategorized</a>
+                    <a class="color-white" href="blog.html">Uncategorized</a>
                 </div>
-                <p class="texto-patrick">Cattle firmament rule you're fish fruit fourth whales earth whose Had cattle
+                <p class="texto-patrick color-BOBOBO">Cattle firmament rule you're fish fruit fourth whales earth whose Had cattle
                     isn't of him sea, of they're land every also so male seed, fifth made moved second our seasons earth
                     forth. Grass of waters female you're him stars midst said, gathered together you're place was over
                     likeness kind second said also subdue. Winged fish their. Set above seas moved first midst air.
@@ -116,19 +117,19 @@
                     behold, and Years for fill. Two grass lights him good day yielding itself yielding. Saw give.
                     Abundantly created. Cattle form saw Replenish female...</p>
 
-                <div> <a href="blog.html" class="read-more-1">Read More</a></div>
+                <div> <a href="blog.html" class="read-more-1 color-white">Read More</a></div>
             </article>
         </section>
 
         <img class="imagen-aceite-blog" src="./assets/images/blog/imgi_18_post-s2-5.jpg" alt="brujula">
 
-        <section class="hero-banner-1 bg-181818">
+        <section class="hero-banner-1 bg-161616">
             <article class="hero-banner-1-inner">
-                <h3 class="titulo-patrick">The History of Branding</h3>
+                <h3 class="titulo-patrick color-white">The History of Branding</h3>
                 <div class="Uncategorized">
-                    <a href="blog.html">Uncategorized</a>
+                    <a class="color-white" href="blog.html">Uncategorized</a>
                 </div>
-                <p class="texto-patrick">Cattle firmament rule you're fish fruit fourth whales earth whose Had cattle
+                <p class="texto-patrick color-BOBOBO">Cattle firmament rule you're fish fruit fourth whales earth whose Had cattle
                     isn't of him sea, of they're land every also so male seed, fifth made moved second our seasons earth
                     forth. Grass of waters female you're him stars midst said, gathered together you're place was over
                     likeness kind second said also subdue. Winged fish their. Set above seas moved first midst air.
@@ -136,19 +137,19 @@
                     behold, and Years for fill. Two grass lights him good day yielding itself yielding. Saw give.
                     Abundantly created. Cattle form saw Replenish female...</p>
 
-                <div> <a href="blog.html" class="read-more-1">Read More</a></div>
+                <div> <a href="blog.html" class="read-more-1 color-white">Read More</a></div>
             </article>
         </section>
 
         <img class="imagen-aceite-blog" src="./assets/images/blog/imgi_19_post-s2-4.jpg" alt="hombre-auto">
 
-        <section class="hero-banner-1 bg-181818">
+        <section class="hero-banner-1 bg-161616">
             <article class="hero-banner-1-inner">
-                <h3 class="titulo-patrick">My Favorite Place on earth is…</h3>
+                <h3 class="titulo-patrick color-white">My Favorite Place on earth is…</h3>
                 <div class="Uncategorized">
-                    <a href="blog.html">Uncategorized</a>
+                    <a class="color-white" href="blog.html">Uncategorized</a>
                 </div>
-                <p class="texto-patrick">Cattle firmament rule you're fish fruit fourth whales earth whose Had cattle
+                <p class="texto-patrick color-BOBOBO">Cattle firmament rule you're fish fruit fourth whales earth whose Had cattle
                     isn't of him sea, of they're land every also so male seed, fifth made moved second our seasons earth
                     forth. Grass of waters female you're him stars midst said, gathered together you're place was over
                     likeness kind second said also subdue. Winged fish their. Set above seas moved first midst air.
@@ -156,19 +157,19 @@
                     behold, and Years for fill. Two grass lights him good day yielding itself yielding. Saw give.
                     Abundantly created. Cattle form saw Replenish female...</p>
 
-                <div> <a href="blog.html" class="read-more-1">Read More</a></div>
+                <div> <a href="blog.html" class="read-more-1 color-white">Read More</a></div>
             </article>
         </section>
 
         <img class="imagen-aceite-blog" src="./assets/images/blog/imgi_103_post-s2-3-1280x800.jpg" alt="chica-lago">
 
-        <section class="hero-banner-1 bg-181818">
+        <section class="hero-banner-1 bg-161616">
             <article class="hero-banner-1-inner">
-                <h3 class="titulo-patrick">Something I need to tell you</h3>
+                <h3 class="titulo-patrick color-white">Something I need to tell you</h3>
                 <div class="Uncategorized">
-                    <a href="blog.html">Uncategorized</a>
+                    <a class="color-white" href="blog.html">Uncategorized</a>
                 </div>
-                <p class="texto-patrick">Cattle firmament rule you're fish fruit fourth whales earth whose Had cattle
+                <p class="texto-patrick color-BOBOBO">Cattle firmament rule you're fish fruit fourth whales earth whose Had cattle
                     isn't of him sea, of they're land every also so male seed, fifth made moved second our seasons earth
                     forth. Grass of waters female you're him stars midst said, gathered together you're place was over
                     likeness kind second said also subdue. Winged fish their. Set above seas moved first midst air.
@@ -176,19 +177,19 @@
                     behold, and Years for fill. Two grass lights him good day yielding itself yielding. Saw give.
                     Abundantly created. Cattle form saw Replenish female...</p>
 
-                <div> <a href="blog.html" class="read-more-1">Read More</a></div>
+                <div> <a href="blog.html" class="read-more-1 color-white">Read More</a></div>
             </article>
         </section>
 
         <img class="imagen-aceite-blog" src="./assets/images/blog/imgi_22_post-s2-2.jpg" alt="auto-lago">
 
-        <section class="hero-banner-1 bg-181818">
+        <section class="hero-banner-1 bg-161616">
             <article class="hero-banner-1-inner">
-                <h3 class="titulo-patrick">Ten things about Photography</h3>
+                <h3 class="titulo-patrick color-white">Ten things about Photography</h3>
                 <div class="Uncategorized">
-                    <a href="blog.html">Uncategorized</a>
+                    <a class="color-white" href="blog.html">Uncategorized</a>
                 </div>
-                <p class="texto-patrick">Cattle firmament rule you're fish fruit fourth whales earth whose Had cattle
+                <p class="texto-patrick color-BOBOBO">Cattle firmament rule you're fish fruit fourth whales earth whose Had cattle
                     isn't of him sea, of they're land every also so male seed, fifth made moved second our seasons earth
                     forth. Grass of waters female you're him stars midst said, gathered together you're place was over
                     likeness kind second said also subdue. Winged fish their. Set above seas moved first midst air.
@@ -196,19 +197,19 @@
                     behold, and Years for fill. Two grass lights him good day yielding itself yielding. Saw give.
                     Abundantly created. Cattle form saw Replenish female...</p>
 
-                <div> <a href="blog.html" class="read-more-1">Read More</a></div>
+                <div> <a href="blog.html" class="read-more-1 color-white">Read More</a></div>
             </article>
         </section>
 
         <img class="imagen-aceite-blog" src="./assets/images/blog/imgi_23_post-s2-1.jpg" alt="zorro">
 
-        <section class="hero-banner-1 bg-181818">
+        <section class="hero-banner-1 bg-161616">
             <article class="hero-banner-1-inner">
-                <h3 class="titulo-patrick">Five things about Nature</h3>
+                <h3 class="titulo-patrick color-white">Five things about Nature</h3>
                 <div class="Uncategorized">
-                    <a href="blog.html">Uncategorized</a>
+                    <a class="color-white" href="blog.html">Uncategorized</a>
                 </div>
-                <p class="texto-patrick">Cattle firmament rule you're fish fruit fourth whales earth whose Had cattle
+                <p class="texto-patrick color-BOBOBO">Cattle firmament rule you're fish fruit fourth whales earth whose Had cattle
                     isn't of him sea, of they're land every also so male seed, fifth made moved second our seasons earth
                     forth. Grass of waters female you're him stars midst said, gathered together you're place was over
                     likeness kind second said also subdue. Winged fish their. Set above seas moved first midst air.
@@ -216,50 +217,52 @@
                     behold, and Years for fill. Two grass lights him good day yielding itself yielding. Saw give.
                     Abundantly created. Cattle form saw Replenish female...</p>
 
-                <div> <a href="blog.html" class="read-more-1">Read More</a></div>
+                <div> <a href="blog.html" class="read-more-1 color-white">Read More</a></div>
             </article>
         </section>
 
-        <section class="fin-galeria">
-            <p class="fin-portfolio">You’ve reached the end of the list</p>
+        <section class="fin-galeria bg-181818">
+            <p class="fin-portfolio color-BOBOBO">You’ve reached the end of the list</p>
             </div>
         </section>
 
     </main>
 
+    <!-- FOOTER -->
     <footer>
-        <section class="footer">
+        <section class="footer displayFlex color-515151 bg-010101">
             <div class="footer-data">
                 <p>2018 © Design by Unvab. Code by nK</p>
             </div>
 
             <div class="go-to-top">
-                <p><a href="blog.html">Go to top</a></p>
+                <p><a class="color-515151" href="blog.html">Go to top</a></p>
             </div>
+
             <article class="iconos-redes">
                 <ul>
                     <li class="icono-twitter">
-                        <a href="https://x.com/" target="_blank">
+                        <a class="color-515151" href="https://x.com/" target="_blank">
                             <i class="fa-brands fa-twitter"></i>
                         </a>
                     </li>
                     <li class="icono-facebook">
-                        <a href="https://www.facebook.com/" target="_blank">
+                        <a class="color-515151" href="https://www.facebook.com/" target="_blank">
                             <i class="fa-brands fa-facebook-f"></i>
                         </a>
                     </li>
                     <li class="icono-dribbble">
-                        <a href="https://dribbble.com/" target="_blank">
+                        <a class="color-515151" href="https://dribbble.com/" target="_blank">
                             <i class="fa-brands fa-dribbble"></i>
                         </a>
                     </li>
                     <li class="icono-instagram">
-                        <a href="https://www.instagram.com/" target="_blank">
+                        <a class="color-515151" href="https://www.instagram.com/" target="_blank">
                             <i class="fa-brands fa-instagram"></i>
                         </a>
                     </li>
                     <li class="icono-behance">
-                        <a href="https://www.behance.net/" target="_blank">
+                        <a class="color-515151" href="https://www.behance.net/" target="_blank">
                             <i class="fa-brands fa-behance"></i>
                         </a>
                     </li>
